Modified index.html, added base structure

--- a/index.html
+++ b/index.html
@@ -17,10 +17,26 @@
         </div>
     </header>
     <main class="main">
+        <div class="main__ces">
 
+        </div>
+        <div class="main__vision">
+
+        </div>
+        <div class="main__news">
+
+        </div>
+        <div class="main__warning">
+
+        </div>
     </main>
     <footer class="footer">
+        <div class="footer__top">
 
+        </div>
+        <div class="footer__bottom">
+
+        </div>
     </footer>
 </body>
 </html>
