--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         </div>
     </header>
     <main class="main">
+        <div class="pages-slider">
+
+        </div>
         <div class="main__ces">
 
         </div>
