Added consumer page and made a base structure

--- a/consumer.html
+++ b/consumer.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nikon</title>
+    <title>Document</title>
 </head>
 <body>
     <header class="header">
@@ -17,15 +17,26 @@
         </div>
     </header>
     <main class="main">
-        <div class="pages-slider">
+        <section class="main__information">
+            <div class="main__consumer-block">
 
-        </div>
-        <div class="main__ces">
+            </div>
+            <div class="main__camera">
 
-        </div>
-        <div class="main__vision">
+            </div>
+            <div class="main__sport-optics">
 
-        </div>
+            </div>
+            <div class="main__ophthalmic-lenses">
+
+            </div>
+            <div class="main__imaging-solution">
+
+            </div>
+            <div class="main__contacts">
+
+            </div>
+        </section>
         <div class="main__news">
 
         </div>
