Added location block in global header and styled it

--- a/business.html
+++ b/business.html
@@ -12,14 +12,13 @@
         <img  class="header__logo" src="/logo">
         <span class="header__site">Business</span>
 
-        </div>
         <ul class="menu header__menu">
             <li class="menu__link">Global Home</li>
             <li class="menu__link">Consumer</li>
             <li class="menu__link">About Us</li>
             <li class="menu__search"></li>
             <li class="menu__network">Global Network</li>
-        </div>
+        </ul>
     </header>
 
     <nav class="nav">Product Line Up</nav>
@@ -104,10 +103,11 @@
 
         <div class="business-search">
             <form class="search-keywords">
-                <input type="text" class="search-keywords__input"></div>
-                <label class="search-keywords__label"></label>
-                <input type="submit" class="search-keywords__submit"></div>
-            </div>
+                <label>
+                    <input type="text" class="search-keywords__input">
+                </label>
+                <input type="submit" class="search-keywords__submit">
+            </form>
         </div>
 
         <div class="info">
