Finished global page header and modified location block

--- a/index.html
+++ b/index.html
@@ -23,14 +23,42 @@
                     <option value="de">Germany</option>
                     <option value="en">England</option>
                 </select>
-                <button type="submit" class="globalHeader__location-submit">Go</button>
+                <button type="submit" class="globalHeader__location-submit button-link">Go</button>
             </form>
 
-            <button class="globalHeader__location-close"></button>
+            <button class="globalHeader__location-close">
+                <img src="imgs/globalHeader/location_header_close_vector.svg" alt="Close"/>
+            </button>
         </div>
-        <div>
+        <nav class="globalHeader__navbar header-navbar">
+            <img class="globalHeader__navbar-logo header-navbar-logo" src="imgs/header-navbar/header_navbar_logo.svg" alt="Capture"/>
 
-        </div>
+            <div class="globalHeader__navbar-block header-navbar-block">
+                <p class="globalHeader__navbar-tag header-navbar-tag">Global</p>
+
+                <ul class="globalHeader__navbar-links header-navbar-links">
+                    <li class="globalHeader__links-item header-navbar-links-item">
+                        <a href="business.html" class="globalHeader__links-item-link header-navbar__links-item-link button-link">Business</a>
+                    </li>
+                    <li class="globalHeader__links-item header-navbar-links-item">
+                        <a href="consumer.html" class="globalHeader__links-item-link header-navbar__links-item-link button-link">Consumer</a>
+                    </li>
+                    <li class="globalHeader__links-item header-navbar-links-item">
+                        <a href="about_us.html" class="globalHeader__links-item-link header-navbar__links-item-link button-link">About us</a>
+                    </li>
+                    <li class="globalHeader__links-item header-navbar-links-item">
+                        <a href="#" class="globalHeader__links-item-link header-navbar__links-item-button">
+                            <img src="imgs/header-navbar/header_navbar_search.svg" alt="Search"/>
+                        </a>
+                    </li>
+                    <li class="globalHeader__links-item header-navbar-links-item">
+                        <a href="#" class="globalHeader__links-item-link header-navbar__links-item-link">
+                            Global Network <img src="imgs/header-navbar/header_navbar_planet.svg" alt=".">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main class="globalMain">
         <div class="globalMain__pages-slider">
