Added some animations in global page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="about_us.html" class="navbar-block__link button-link">About us</a>
                     </li>
                     <li class="navbar-block__item">
-                        <a href="#" class="navbar-block__link">
+                        <a href="#" class="navbar-block__button">
                             <img src="imgs/global-page/header-navbar/header_navbar_search.svg" alt="Search"/>
                         </a>
                     </li>
