--- a/about_us.html
+++ b/about_us.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="css/about_us.css"/>
 </head>
 <body>
     <header class="header">
         <div class="header__logo"></div>
+        <div class="header__page">About Us</div>
         <div class="header__nav"></div>
     </header>
     <nav class="nav">
@@ -19,10 +21,14 @@
     </nav>
     <main class="main">
         <div class="about-us">
-            <h1 class="about-us__title"></h1>
-            <p class="about-us__text"></p>
+            <img class="about-us__img" src="/imgs/about_us/about_us_top.svg" alt="photo">
+            <div class="about-us__content">
+            <h1 class="about-us__title">About Us</h1>
+            <p class="about-us__text">Find the latest information on Nikon today, as well as basic information about the company.</p>
+            </div>
         </div>
         <div class="featured">
+            <h2 class="featured__title">Featured</h2>
             <ul class="featured__list">
                 <li class="featured__item">
                     <div class="company-pickup">
@@ -191,10 +197,10 @@
             </div>
         </div>
 
-        <div class="company-socialmedia">
-            <div class="company-socialmedia__panel">
-                <a href="/" class="company-socialmedia__link"></a>
-                <p class="company-socialmedia__text"></p>
+        <div class="company-social-media">
+            <div class="company-social-media__panel">
+                <a href="/" class="company-social-media__link"></a>
+                <p class="company-social-media__text"></p>
             </div>
             <h2 class="technology__title"></h2>
         </div>
