added vision block at global page and started making news block

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <option value="de">Germany</option>
                     <option value="en">England</option>
                 </select>
-                <button type="submit" class="location__submit button-link">Go</button>
+                <button type="submit" class="location__submit dark-button button-link">Go</button>
             </form>
 
             <button class="location__close">
@@ -93,10 +93,93 @@
             </section>
         </div>
         <div class="vision">
+            <section class="vision__entry">
+                <h4 class="vision__title">Innovation 2030</h4>
+                <h5 class="vision__subtitle">A key technology solutions company in a global society where humans and machines co-create seamlessly</h5>
+                <p class="vision__note">Our corporate initiatives for achieving Innovation 2030.</p>
+            </section>
 
+            <div class="vision__body vision-body">
+                <ul class="vision-body__list vision-cards">
+                    <li class="vision-cards__item">
+                        <article class="vision__card vision-card">
+                            <img class="vision-card__image" src="imgs/global-page/vision/card1.png" alt="Card 1"/>
+                            <div class="vision-card__body">
+                                <h5 class="vision-card__title">Innovation and Talent: exploring key linkages</h5>
+                                <p class="vision-card__description">
+                                    Innovation and talent linkage refers to the crucial connection between creative thinking and skilled individuals.
+                                    It involves harnessing the abilities of talented individuals to drive and implement innovative ideas, fostering
+                                    a dynamic environment where new concepts can flourish and make a meaningful impact.
+                                    This synergy often leads to groundbreaking solutions and advancements across various fields.
+                                    That’s why Capture are helping people develop their skills with new technologies in their joint future.
+                                </p>
+                                <a href="#" class="vision-card__button dark-button button-link">Click here for details</a>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="vision-cards__item">
+                        <article class="vision__card vision-card">
+                            <img class="vision-card__image" src="imgs/global-page/vision/card2.png" alt="Card 2"/>
+                            <div class="vision-card__body">
+                                <h5 class="vision-card__title">Realizing Professionals' Ideals</h5>
+                                <p class="vision-card__description">
+                                    Our technologies and solutions meet the demands of professionals, helping society solve issues and make progress using AI.
+                                </p>
+                                <a href="#" class="vision-card__button dark-button button-link">Click here for details</a>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="vision-cards__item">
+                        <article class="vision__card vision-card">
+                            <img class="vision-card__image" src="imgs/global-page/vision/card3.png" alt="Card 3"/>
+                            <div class="vision-card__body">
+                                <h5 class="vision-card__title">Capture’s Sustainability</h5>
+                                <p class="vision-card__description">
+                                    By embodying our corporate philosophy of "Trustworthiness and Creativity"
+                                    in our business activities, we aim to both contribute to a sustainable society
+                                    and achieve sustainable growth for our company. Here we present Capture’s sustainability
+                                    activities in the areas of business, environment, social and labor affairs, and governance.
+                                </p>
+                                <a href="#" class="vision-card__button dark-button button-link">Click here for details</a>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="vision-cards__item">
+                        <article class="vision__card vision-card">
+                            <img class="vision-card__image" src="imgs/global-page/vision/card4.png" alt="Card 4"/>
+                            <div class="vision-card__body">
+                                <h5 class="vision-card__title">We are launching new innovative 2030 mirrorless lens</h5>
+                                <p class="vision-card__description">
+                                    The new Capture’s lens generation incorporates advanced optics and cutting-edge materials,
+                                    providing enhanced clarity, reduced distortions, and improved low-light performance.
+                                    These lenses often feature innovative coatings for better scratch resistance,
+                                    anti-glare properties, and protection against harmful UV rays. Additionally,
+                                    advancements in manufacturing techniques contribute to lighter and more durable lenses,
+                                    offering users a more comfortable and long-lasting visual experience.
+                                </p>
+                                <a href="#" class="vision-card__button dark-button button-link">Click here for details</a>
+                            </div>
+                        </article>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="news">
-
+            <div class="news__header">
+                <h3 class="news__title">News</h3>
+                <img class="news__rss" src="imgs/global-page/news/rss.svg" alt="RSS"/>
+            </div>
+<!--            TODO-->
+            <div class="news__body">
+                <ul class="news__list">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+                <a href="#" class="news__button button-link">See all news</a>
+            </div>
         </div>
         <div class="warning-block">
 
