Fixed Some bugs

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
                 <ul class="navbar-block__links">
                     <li class="navbar-block__item">
-                        <a href="business.html" class="navbar-block__link light-link">Business</a>
+                        <a href="business.html" class="navbar-block__link light-link light-link-hoverable">Business</a>
                     </li>
                     <li class="navbar-block__item">
-                        <a href="consumer.html" class="navbar-block__link light-link">Consumer</a>
+                        <a href="consumer.html" class="navbar-block__link light-link light-link-hoverable">Consumer</a>
                     </li>
                     <li class="navbar-block__item">
-                        <a href="about_us.html" class="navbar-block__link light-link">About us</a>
+                        <a href="about_us.html" class="navbar-block__link light-link light-link-hoverable">About us</a>
                     </li>
                     <li class="navbar-block__item">
                         <a href="#" class="navbar-block__button">
@@ -62,24 +62,24 @@
     </header>
     <main class="global-main">
         <div class="page-cards">
-            <section class="page-cards__item" id="business-card">
+            <article class="page-cards__item" id="business-card">
                 <div class="page-cards__text">
                     <h3 class="page-cards__title">Business</h3>
                     <a href="business.html" class="page-cards__button light-link">Products & Solutions</a>
                 </div>
-            </section>
-            <section class="page-cards__item" id="consumer-card">
+            </article>
+            <article class="page-cards__item" id="consumer-card">
                 <div class="page-cards__text">
                     <h3 class="page-cards__title">Consumer</h3>
-                    <a  href="business.html" class="page-cards__button light-link">Products & Services</a>
+                    <a  href="consumer.html" class="page-cards__button light-link">Products & Services</a>
                 </div>
-            </section>
-            <section class="page-cards__item" id="about-us-card">
+            </article>
+            <article class="page-cards__item" id="about-us-card">
                 <div class="page-cards__text">
                     <h3 class="page-cards__title">About Us</h3>
-                    <a href="business.html" class="page-cards__button light-link">Company Information</a>
+                    <a href="about_us.html" class="page-cards__button light-link">Company Information</a>
                 </div>
-            </section>
+            </article>
         </div>
         <div class="ces">
             <section class="ces__main">
@@ -166,17 +166,12 @@
         </div>
         <div class="news">
             <div class="news__header news-header">
-            <div class="news-header__body">
                 <h3 class="news-header__title">News</h3>
-                <div class="news-header__rss">
-                    <a href="#" class="news-header__rss-link">
-                        <img class="news-header__rss-img" src="imgs/global-page/news/rss.svg" alt="RSS"/>
-                    </a>
-                </div>
+                <a href="#" class="news-header__rss-link">
+                    <img class="news-header__rss-img" src="imgs/global-page/news/rss.svg" alt="RSS"/>
+                </a>
             </div>
 
-
-            </div>
 <!--            TODO-->
             <div class="news__body">
                 <ul class="news__list">
